--- a/TestJeu1/.classpath
+++ b/TestJeu1/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="C:/Users/ASC Arma/Desktop/TestJeu/TestJeu1/lib/jinput.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASC Arma/Desktop/TestJeu/TestJeu1/lib/lwjgl.jar"/>
 	<classpathentry kind="lib" path="C:/Users/ASC Arma/Desktop/TestJeu/TestJeu1/lib/slick.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASC Arma/Desktop/Trading/MariaDB.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
